# AttendyProjectNew

./: .gitignore
attendy-new/: README.md  pyproject.toml
attendy-new/attendy_new/: face_r.py  use_cuda.py
