[tool.poetry]
name = "attendy-new"
version = "0.1.0"
description = ""
authors = ["leehg <turboguy36@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
